--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
+  },
+  "devDependencies": {
+    "webpack-glsl-loader": "^1.0.1"
   }
 }
